--- a/client/package.json
+++ b/client/package.json
@@ -19,7 +19,7 @@
     "web-vitals": "^0.2.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "set PORT=3010 && react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -42,5 +42,9 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://localhost:3002/"
+  "proxy": "http://localhost:3002/",
+  "devDependencies": {
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.5"
+  }
 }
